<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="first_num">First Num</string>
    <string name="second_num">Second Num</string>
    <string name="first_num_ed">First Number</string>
    <string name="second_num_ed">Second Number</string>
    <string name="add_btn">Add</string>


</resources>